Fixes the spinner showing on moz inputs; resizes date inputs on smaller screens;

--- a/public/amls.css
+++ b/public/amls.css
@@ -631,6 +631,16 @@ table.summary td {
   .check-your-answers--header .heading-xsmall {
     font-size: 14px;
   }
+  form input[type="text"].form-control,
+  form input[type="tel"].form-control,
+  form input[type="number"].form-control {
+    width: 50%;
+  }
+  .form-group-day input[type="number"].form-control,
+  .form-group-month input[type="number"].form-control,
+  .form-group-year input[type="number"].form-control {
+    width: 100%;
+  }
 }
 
 /* icons */
@@ -830,4 +840,10 @@ fieldset.panel-indent legend {
   .declaration p {
     margin: 0;
   }
+}
+
+.form-control {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
